fix(checkbox): align check icon within checkbox (#633)

--- a/packages/crayons-core/src/components/checkbox/checkbox.scss
+++ b/packages/crayons-core/src/components/checkbox/checkbox.scss
@@ -172,10 +172,12 @@ input[type='checkbox'] {
 
     .after {
       position: absolute;
-      display: block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       content: '';
       inset-inline-start: 3px;
-      inset-block-start: 0;
+      inset-block-start: 7px;
       width: 8px;
       height: 8px;
       opacity: 0;
